gl33-master/src/test/deca/context/invalid/other/affectation_int_boolean.deca
// Invalid test
// Affectation d'un int à un boolean

{
   int n;
   boolean b;

   b = n;
   b = 2;
}
